--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "nyrados/http-utils",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "description": "Basic Utils for working with HTTP in PHP",
     "require": {
         "php": "^7.2",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "psr/http-server-middleware": "^1.0",
+        "guzzlehttp/psr7": "^1.6"
     },
     "autoload": {
         "psr-4": {
