--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": "^7.2",
         "psr/http-message": "^1.0",
         "psr/http-server-middleware": "^1.0",
-        "guzzlehttp/psr7": "^1.6"
+        "guzzlehttp/psr7": "^1.6",
+        "psr/http-factory": "^1.0"
     },
     "autoload": {
         "psr-4": {
